Update README and screenshots.

--- a/README.org
+++ b/README.org
@@ -1,16 +1,18 @@
+#+STARTUP: content 
+
 * Netmon - Cross Platform Internet / Network Monitoring Application 
 ** Overview 
 
 *What is it?*
 
 It is small and simple open-source and cross-platform graphical app
-for monitoring internet connection. This program pools an known
-internet address (www.google.com and the address of this host name
-216.58.222.100) in a regular time interval to check the connection
-status. While Windows has this functionality, this application
-provides more feedback about the network status, for instance, it can
-diagnose the case when the network is working, but the DNS is
-failing. 
+for monitoring internet connection. This program pools a list of
+random hostnames and address such as (www.google.com and and its
+address 216.58.222.100) in a regular time interval to check the
+connection status. While Windows has this functionality, this
+application provides more feedback about the network status, for
+instance, it can diagnose the case when the network is working, but
+the DNS is failing. 
 
 Features: 
  
@@ -24,7 +26,7 @@ Screenshots:
 
  - Tray icon when the computer is offline 
 
-[[file:images/network-online.png][file:images/network-offline.png]] 
+[[file:images/network-offline.png][file:images/network-offline.png]] 
 
 When the user clicks on the tray icon it shows a window with more
 detailed information about the connection failure. 
